Updated the popover shadow and fixed the dark mode colors

--- a/src/styles/components/_popover.scss
+++ b/src/styles/components/_popover.scss
@@ -1,12 +1,23 @@
 :root, .neeto-ui-theme--light, .neeto-ui-theme--dark {
-  --neeto-ui-popover-border-width: 1px;
-  --neeto-ui-popover-border-color: rgb(var(--neeto-ui-beige-300));
+  --neeto-ui-popover-border-width: 0px;
+  --neeto-ui-popover-border-color: transparent;
   --neeto-ui-popover-padding-x: 2rem;
   --neeto-ui-popover-padding-y: 2rem;
   --neeto-ui-popover-border-radius: var(--neeto-ui-rounded-xl);
+}
 
-  // Light theme
-  --neeto-ui-popover-light-theme-border-color: rgb(var(--neeto-ui-beige-300));
+.neeto-ui-theme--light {
+  --neeto-ui-popover-light-theme-border-color: transparent;
+  --neeto-ui-popover-shadow-color: rgba(var(--neeto-ui-black), 0.13);
+  --neeto-ui-tooltip-light-theme-box-shadow: none;
+}
+
+.neeto-ui-theme--dark {
+  --neeto-ui-popover-light-theme-border-color: transparent;
+  --neeto-ui-popover-shadow-color: rgba(var(--neeto-ui-white), 0.13);
+  --neeto-ui-tooltip-light-theme-box-shadow: none;
+  --neeto-ui-tooltip-light-theme-bg-color: rgb(var(--neeto-ui-gray-300));
+  --neeto-ui-tooltip-light-theme-arrow-color: rgb(var(--neeto-ui-gray-300));
 }
 
 .neeto-ui-popover {
@@ -16,11 +27,11 @@
   --neeto-ui-tooltip-arrow-offset: 1.5rem;
   border: var(--neeto-ui-popover-border-width) solid var(--neeto-ui-popover-border-color);
   border-radius: var(--neeto-ui-popover-border-radius);
+  filter: drop-shadow(0px 0px 3px var(--neeto-ui-popover-shadow-color));
 
 
   &[data-theme~=light] {
     border-color: var(--neeto-ui-popover-light-theme-border-color);
-    box-shadow: none;
   }
 
   p {
